# errors

./: CMakeLists.txt  Doxyfile  gocxx_errors.pc.in  mainpage.docx
.github/workflows/: release.yml
docs/html/: annotated.html  classes.html  classgocxx_1_1errors_1_1join_error-members.html  classgocxx_1_1errors_1_1join_error.html  classgocxx_1_1errors_1_1simple_error-members.html  classgocxx_1_1errors_1_1simple_error.html  classgocxx_1_1errors_1_1wrapped_error-members.html  classgocxx_1_1errors_1_1wrapped_error.html  dir_04389753d16f9d68efab33f106d95920.html  dir_cd2407bb3786b3043fc79c454a8af871.html  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen_crawl.html  errors_8h_source.html  files.html  functions.html  functions_func.html  hierarchy.html  index.html  structgocxx_1_1errors_1_1_error-members.html  structgocxx_1_1errors_1_1_error.html
docs/html/search/: all_0.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  pages_0.js  searchdata.js
include/gocxx/errors/: errors.h
tests/: errors_test.cpp
